Add PV power measurements and refine existing parameters in deye_4mppt.yaml
Introduced new parameters for PV1 to PV4 power measurements, enhancing the inverter's monitoring capabilities. Adjusted the formatting of existing parameters for consistency and clarity.

--- a/custom_components/solarman/inverter_definitions/deye_4mppt.yaml
+++ b/custom_components/solarman/inverter_definitions/deye_4mppt.yaml
@@ -84,6 +84,42 @@ parameters:
       registers: [0x0074]
       icon: 'mdi:solar-power'
 
+    - name: "PV1 Power"
+      class: "power"
+      state_class: "measurement"
+      uom: "W"     
+      scale: 10
+      rule: 11                      
+      registers: [0x006D, 0x006E]
+      icon: 'mdi:solar-power'
+
+    - name: "PV2 Power"
+      class: "power"              
+      state_class: "measurement"
+      uom: "W"      
+      scale: 10
+      rule: 11                          
+      registers: [0x006F, 0x0070]
+      icon: 'mdi:solar-power'
+
+    - name: "PV3 Power"
+      class: "power"
+      state_class: "measurement"
+      uom: "W"      
+      scale: 10
+      rule: 11                          
+      registers: [0x0071, 0x0072]
+      icon: 'mdi:solar-power'
+
+    - name: "PV4 Power"
+      class: "power"
+      state_class: "measurement"
+      uom: "W"      
+      scale: 10
+      rule: 11                          
+      registers: [0x0073, 0x0074]
+      icon: 'mdi:solar-power'
+
     - name: "Daily Production"
       class: "energy"
       state_class: "total"
@@ -93,41 +129,41 @@ parameters:
       registers: [0x003C]
       icon: 'mdi:solar-power'
 
-      - name: "Daily Production 1"
-        class: "energy"
-        state_class: "total"
-        uom: "kWh"
-        scale: 0.1
-        rule: 1
-        registers: [0x0041]
-        icon: 'mdi:solar-power'
+    - name: "Daily Production 1"
+      class: "energy"
+      state_class: "total"
+      uom: "kWh"
+      scale: 0.1
+      rule: 1
+      registers: [0x0041]
+      icon: 'mdi:solar-power'
 
-      - name: "Daily Production 2"
-        class: "energy"
-        state_class: "total"
-        uom: "kWh"
-        scale: 0.1
-        rule: 1
-        registers: [0x0042]
-        icon: 'mdi:solar-power'
+    - name: "Daily Production 2"
+      class: "energy"
+      state_class: "total"
+      uom: "kWh"
+      scale: 0.1
+      rule: 1
+      registers: [0x0042]
+      icon: 'mdi:solar-power'
 
-      - name: "Daily Production 3"
-        class: "energy"
-        state_class: "total"
-        uom: "kWh"
-        scale: 0.1
-        rule: 1
-        registers: [0x0043]
-        icon: 'mdi:solar-power'
+    - name: "Daily Production 3"
+      class: "energy"
+      state_class: "total"
+      uom: "kWh"
+      scale: 0.1
+      rule: 1
+      registers: [0x0043]
+      icon: 'mdi:solar-power'
 
-      - name: "Daily Production 4"
-        class: "energy"
-        state_class: "total"
-        uom: "kWh"
-        scale: 0.1
-        rule: 1
-        registers: [0x0044]
-        icon: 'mdi:solar-power'
+    - name: "Daily Production 4"
+      class: "energy"
+      state_class: "total"
+      uom: "kWh"
+      scale: 0.1
+      rule: 1
+      registers: [0x0044]
+      icon: 'mdi:solar-power'
 
     - name: "Total Production"
       class: "energy"
@@ -141,41 +177,41 @@ parameters:
         min: 0.1
         invalidate_all:
 
-      - name: "Total Production 1"
-        class: "energy"
-        state_class: "total_increasing"
-        uom: "kWh"
-        scale: 0.1
-        rule: 3
-        registers: [0x0045]
-        icon: 'mdi:solar-power'
+    - name: "Total Production 1"
+      class: "energy"
+      state_class: "total_increasing"
+      uom: "kWh"
+      scale: 0.1
+      rule: 3
+      registers: [0x0045]
+      icon: 'mdi:solar-power'
 
-      - name: "Total Production 2"
-        class: "energy"
-        state_class: "total_increasing"
-        uom: "kWh"
-        scale: 0.1
-        rule: 3
-        registers: [0x0047]
-        icon: 'mdi:solar-power'
+    - name: "Total Production 2"
+      class: "energy"
+      state_class: "total_increasing"
+      uom: "kWh"
+      scale: 0.1
+      rule: 3
+      registers: [0x0047]
+      icon: 'mdi:solar-power'
 
-      - name: "Total Production 3"
-        class: "energy"
-        state_class: "total_increasing"
-        uom: "kWh"
-        scale: 0.1
-        rule: 3
-        registers: [0x0046]
-        icon: 'mdi:solar-power'
+    - name: "Total Production 3"
+      class: "energy"
+      state_class: "total_increasing"
+      uom: "kWh"
+      scale: 0.1
+      rule: 3
+      registers: [0x0046]
+      icon: 'mdi:solar-power'
 
-      - name: "Total Production 4"
-        class: "energy"
-        state_class: "total_increasing"
-        uom: "kWh"
-        scale: 0.1
-        rule: 3
-        registers: [0x0048]
-        icon: 'mdi:solar-power'
+    - name: "Total Production 4"
+      class: "energy"
+      state_class: "total_increasing"
+      uom: "kWh"
+      scale: 0.1
+      rule: 3
+      registers: [0x0048]
+      icon: 'mdi:solar-power'
 
     - name: "Active Power Regulations"
       class: ""
@@ -215,104 +251,104 @@ parameters:
       registers: [0x004F]
       icon: 'mdi:home-lightning-bolt'
 
-      - name: "Grid Voltage Upp Limit"
-        class: "voltage"
-        state_class: ""
-        uom: "V"
-        scale: 0.1
-        rule: 1
-        registers: [0x001B]
-        icon: 'mdi:transmission-tower'
+    - name: "Grid Voltage Upp Limit"
+      class: "voltage"
+      state_class: ""
+      uom: "V"
+      scale: 0.1
+      rule: 1
+      registers: [0x001B]
+      icon: 'mdi:transmission-tower'
 
-      - name: "Grid Voltage Lower Limit"
-        class: "voltage"
-        state_class: ""
-        uom: "V"
-        scale: 0.1
-        rule: 1
-        registers: [0x001C]
-        icon: 'mdi:transmission-tower'
+    - name: "Grid Voltage Lower Limit"
+      class: "voltage"
+      state_class: ""
+      uom: "V"
+      scale: 0.1
+      rule: 1
+      registers: [0x001C]
+      icon: 'mdi:transmission-tower'
 
-      - name: "Grid Frequency Upper Limit"
-        class: "frequency"
-        state_class: ""
-        uom: "Hz"
-        scale: 0.01
-        rule: 1
-        registers: [0x001D]
-        icon: 'mdi:home-lightning-bolt'
+    - name: "Grid Frequency Upper Limit"
+      class: "frequency"
+      state_class: ""
+      uom: "Hz"
+      scale: 0.01
+      rule: 1
+      registers: [0x001D]
+      icon: 'mdi:home-lightning-bolt'
 
-      - name: "Grid Frequency Lower Limit"
-        class: "frequency"
-        state_class: ""
-        uom: "Hz"
-        scale: 0.01
-        rule: 1
-        registers: [0x001E]
-        icon: 'mdi:home-lightning-bolt'
+    - name: "Grid Frequency Lower Limit"
+      class: "frequency"
+      state_class: ""
+      uom: "Hz"
+      scale: 0.01
+      rule: 1
+      registers: [0x001E]
+      icon: 'mdi:home-lightning-bolt'
 
-      - name: "Overfrequency And Load Reduction Starting Point"
-        class: "frequency"
-        state_class: ""
-        uom: "Hz"
-        scale: 0.01
-        rule: 1
-        registers: [0x0022]
-        icon: 'mdi:home-lightning-bolt'
+    - name: "Overfrequency And Load Reduction Starting Point"
+      class: "frequency"
+      state_class: ""
+      uom: "Hz"
+      scale: 0.01
+      rule: 1
+      registers: [0x0022]
+      icon: 'mdi:home-lightning-bolt'
 
-      - name: "Overfrequency And Load Reduction Percentage"
-        class: ""
-        state_class: ""
-        uom: "%"
-        scale: 1
-        rule: 1
-        registers: [0x0023]
-        icon: ''
+    - name: "Overfrequency And Load Reduction Percentage"
+      class: ""
+      state_class: ""
+      uom: "%"
+      scale: 1
+      rule: 1
+      registers: [0x0023]
+      icon: ''
 
-      - name: "ON-OFF Enable"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 1
-        registers: [0x002B]
-        isstr: true
-        lookup:
-          - key: 0
-            value: "OFF"
-          - key: 1
-            value: "ON"
-        icon: 'mdi:toggle-switch'
+    - name: "ON-OFF Enable"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 1
+      registers: [0x002B]
+      isstr: true
+      lookup:
+        - key: 0
+          value: "OFF"
+        - key: 1
+          value: "ON"
+      icon: 'mdi:toggle-switch'
 
-      - name: "Island Protection Enable"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 1
-        registers: [0x002E]
-        isstr: true
-        lookup:
-          - key: 0
-            value: "Disabled"
-          - key: 1
-            value: "Enabled"
-        icon: 'mdi:island'
+    - name: "Island Protection Enable"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 1
+      registers: [0x002E]
+      isstr: true
+      lookup:
+        - key: 0
+          value: "Disabled"
+        - key: 1
+          value: "Enabled"
+      icon: 'mdi:island'
 
-      - name: "Overfrequency&Load-shedding Enable"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 1
-        registers: [0x0031]
-        isstr: true
-        lookup:
-          - key: 0
-            value: "Disabled"
-          - key: 1
-            value: "Enabled"
-        icon: 'mdi:toggle-switch'
+    - name: "Overfrequency&Load-shedding Enable"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 1
+      registers: [0x0031]
+      isstr: true
+      lookup:
+        - key: 0
+          value: "Disabled"
+        - key: 1
+          value: "Enabled"
+      icon: 'mdi:toggle-switch'
 
   - group: Inverter
     items:
@@ -364,32 +400,32 @@ parameters:
       registers: [0x0003,0x0004,0x0005,0x0006,0x0007]
       isstr: true
 
-      - name: "Hardware Version"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 7
-        registers: [0x000C]
-        isstr: true
+    - name: "Hardware Version"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 7
+      registers: [0x000C]
+      isstr: true
 
-      - name: "DC Master Firmware Version"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 7
-        registers: [0x000D]
-        isstr: true
+    - name: "DC Master Firmware Version"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 7
+      registers: [0x000D]
+      isstr: true
 
-      - name: "AC Version. Number"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 7
-        registers: [0x000E]
-        isstr: true
+    - name: "AC Version. Number"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 7
+      registers: [0x000E]
+      isstr: true
 
     - name: "Rated Power"
       class: "energy"
@@ -400,14 +436,14 @@ parameters:
       registers: [0x0010]
       icon: 'mdi:solar-power'
 
-      - name: "Communication Protocol Version"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 7
-        registers: [0x0012]
-        isstr: true
+    - name: "Communication Protocol Version"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 7
+      registers: [0x0012]
+      isstr: true
 
     - name: "Start-up Self-checking Time "
       class: ""
@@ -418,14 +454,14 @@ parameters:
       registers: [0x0015]
       icon: 'mdi:solar-power'
 
-      - name: "Update Time"
-        class: ""
-        state_class: ""
-        uom: ""
-        scale: 1
-        rule: 8
-        registers: [0x0016,0x0017,0x0018]
-        isstr: true
+    - name: "Update Time"
+      class: ""
+      state_class: ""
+      uom: ""
+      scale: 1
+      rule: 8
+      registers: [0x0016,0x0017,0x0018]
+      isstr: true
 
     - name: "Soft Start Enable"
       class: ""
